talvez tenha consertado o tangle readme.md

--- a/README.org
+++ b/README.org
@@ -1,9 +1,9 @@
 #+title: bashln-scripts
 #+AUTHOR: bashln
 #+OPTIONS: toc:nil
-#+PROPERTY: header-args:markdown :tangle README.md
 
-#+begin_src markdown
+#+begin_src markdown :tangle README.md
+
 
 # 🧩 bshln-scripts
 
